--- a/expenses-backend/public/css/signin.css
+++ b/expenses-backend/public/css/signin.css
@@ -24,7 +24,7 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .checkbox {
+.form-signin{
   font-weight: 400;
 }
 .form-signin .form-control {
